Fix misalignment on hb menu

--- a/styles/main.css
+++ b/styles/main.css
@@ -215,7 +215,7 @@ a:hover:after {
 .blog-content {
     max-width: 60%;
     margin: 0 auto;
-    padding-top: 20vh;
+    padding-top: 25vh;
 }
 
 .blog-title {
@@ -288,8 +288,8 @@ footer {
 .hamburger-container .checkbox {
     opacity: 0;
     position: fixed;
-    width: 2rem;
-    height: 2rem;
+    width: 3rem;
+    height: 3rem;
     right: 2rem;
     top: 2rem;
     z-index: 100;
